Use Etsy's API to fetch store data

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Etsy Data</title>
   </head>
   <body>
+    <script src="secrets.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
     <script src="logger.js"></script>
